refactor to use blueprints

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <div class="side-menu">
             <div class="button-grp-vertical-top">
                 <button id="lolkek1488" class="btn-vertical default"
-                        onclick="window.location.href = '{{ url_for('main_form') }}';">Projects</button>
+                        onclick="window.location.href = '{{ url_for('projects.main_form') }}';">Projects</button>
             {% block menu_entities %}
             {% endblock %}
             </div>
