--- a/templates/product/products_view.html
+++ b/templates/product/products_view.html
@@ -11,7 +11,7 @@
         <div id="head_buttons_view" class="right" style="width: 50%">
             <button id="create_product" name="{{ project_id  }}"
                     class="btn-horizontal default right"
-                    onclick="window.location.href = '{{ url_for('edit_product', project_id=project_id, product_id='new_product') }}';"
+                    onclick="window.location.href = '{{ url_for('products.edit_product', project_id=project_id, product_id='new_product') }}';"
             >Create product</button>
         </div>
     </div>
@@ -37,7 +37,7 @@
                 <td>{{ product.name }}</td>
                 <td>
                     <button id="product_edit" name="{{ product.id  }}"
-                            onclick="window.location.href = '{{ url_for('edit_product', project_id=project_id, product_id=product.id)}}';"
+                            onclick="window.location.href = '{{ url_for('products.edit_product', project_id=project_id, product_id=product.id)}}';"
                     >Edit</button>
                     <button id="product_remove" onclick="remove_product({{ project_id }}, {{ product.id }}, '{{ product.name }}')"
                             name="{{ product.id }}">Delete</button>
