--- a/templates/project/create_project.html
+++ b/templates/project/create_project.html
@@ -4,7 +4,7 @@
         <p class="left">{{ current_user }}</p>
         <div id="head_buttons_view" class="right" style="width: 50%">
             <button id="save_project" class="btn-horizontal default right">Save</button>
-            <button id="cancell" class="btn-horizontal default right" onclick="window.location.href = '{{ url_for('main_form') }}';">Cancel</button>
+            <button id="cancell" class="btn-horizontal default right" onclick="window.location.href = '{{ url_for('projects.main_form') }}';">Cancel</button>
         </div>
     </div>
 {% endblock %}
@@ -13,7 +13,7 @@
 {% endblock %}
 {% block page_content %}
     <div id="current_view" class="brdr">
-        <form id="project_name_form" method="POST" action="{{ url_for('create_project') }}">
+        <form id="project_name_form" method="POST" action="{{ url_for('projects.create_project') }}">
         {{ form.csrf_token }}
         {{ form.name.label }}
         {{ form.name }}
