--- a/templates/project/project_view.html
+++ b/templates/project/project_view.html
@@ -1,20 +1,12 @@
-{% extends 'base.html' %}
-{% block menu_entities %}
-    {% include 'menu_entities.html'  %}
-{% endblock %}
-{% block horizontal_pane %}
-    <div class="button-grp-horizontal">
-        <p class="left">{{ current_user }}</p>
-        <div id="head_buttons_view" class="right" style="width: 50%">
-            <button id="project_settings" name="{{ project_id  }}"
-                    class="btn-horizontal default right"
-                    onclick="window.location.href = '{{ url_for('projects.project_settings', project_id=project_id)}}';"
-            >Settings</button>
-        </div>
-    </div>
+{% extends 'base_site.html' %}
+{% block title %}
+Project View
+{% endblock title%}
+{% block navigation_bar %}
+    <li>
+        <a class="btn btn-app" href="{{ url_for('projects.project_settings', project_id=project_id) }}"><i class="fa fa-cogs"></i>Project Settings</a>
+    </li>
 {% endblock %}
 {% block breadcrumbs %}
-    {% include 'breadcrumbs_list.html' %}
-{% endblock %}
-{% block page_content %}
+    {% include 'breadcrumb_list_new.html' %}
 {% endblock %}
