--- a/templates/monitoring/monitorings_table_view.html
+++ b/templates/monitoring/monitorings_table_view.html
@@ -1,8 +1,11 @@
-<div id="current_view" class="brdr">
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box">
+            <div class="box-body">
         {% if not entities %}
             NO ENTITIES CREATED
         {% else %}
-            <table id="example" class="display" style="width:100%">
+            <table id="example" class="table table-bordered table-striped text-center">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -14,15 +17,15 @@
             <tr>
                 <td>{{ entity.name }}</td>
                 <td>
-                    <button id="entity_view" name="{{ entity.id  }}"
+                    <a id="entity_view" class="btn btn-app" name="{{ entity.id  }}"
                             onclick="window.location.href = '{{ url_for(view_entity, project_id=project_id, monitoring_id=entity.id) }}';"
-                    >View</button>
-                    <button id="entity_edit" name="{{ entity.id  }}"
+                    ><i class="fa fa-eye"></i>View</a>
+                    <a id="entity_edit" class="btn btn-app" name="{{ entity.id  }}"
                             onclick="window.location.href = '{{ url_for(edit_entity, project_id=project_id, entity_id=entity.id) }}';"
-                    >Settings</button>
-                    <button id="seller_remove"
+                    ><i class="fa fa-cogs"></i>Settings</a>
+                    <a id="seller_remove" class="btn btn-app"
                             onclick = "remove_entity({{ project_id }}, '{{ common_name }}', {{ entity.id }}, '{{ entity.name }}', '{{ delete_entity_url }}', '{{ entity_view_url }}' )"
-                            name="{{ entity.id  }}">Delete</button>
+                            name="{{ entity.id  }}"><i class="fa fa-trash"></i>Delete</a>
                 </td>
             </tr>
             {% endfor %}
@@ -35,4 +38,8 @@
             </tfoot>
             </table>
     {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
+
