--- a/templates/parser/edit_parser.html
+++ b/templates/parser/edit_parser.html
@@ -1,47 +1,60 @@
-{% extends 'base.html' %}
-{% block add_scripts %}
-<link rel="stylesheet" href="/static/styles/highlight_default.css">
-<script src="/static/js/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-<script src="/static/js/common.js"></script>
-<script src="/static/js/parser_callbacks.js"></script>
-{% endblock %}
-{% block menu_entities %}
-    {% include 'menu_entities.html'  %}
-{% endblock %}
-{% block horizontal_pane %}
-    <div class="button-grp-horizontal">
-        <p class="left">{{ current_user }}</p>
-        <div id="head_buttons_view" class="right" style="width: 50%">
-            <button id="save_entity" onclick="save_parser_data('{{save_entity_url}}','{{entity_view_url}}')" class="btn-horizontal default right">Save</button>
-            <button id="cancell" class="btn-horizontal default right" onclick="window.location.href = '{{ entity_view_url }}';">Cancel</button>
-            {% if entity_id != 'new_entity' %}
-            <button id="test_parser" class="btn-horizontal default right" onclick="window.location.href = '{{ test_parser_url }}';">Test Parser</button>
-            {% endif %}
-        </div>
-    </div>
+{% extends 'base_site.html' %}
+{% block title %}
+Edit Parser
+{% endblock title%}
+{% block navigation_bar %}
+<li>
+    <a id="test_parser" onclick="window.location.href = '{{ test_parser_url }}';" class="btn btn-app" ><i class="fa fa-bar-chart"></i>Test Parser</a>
+</li>
+<li>
+    <a class="btn btn-app" onclick="window.location.href = '{{ entity_view_url }}';"><i class="fa fa-bar-chart"></i>Cancel</a>
+</li>
+<li>
+    <a id="save_entity" onclick="save_parser_data('{{save_entity_url}}','{{entity_view_url}}')" class="btn btn-app" ><i class="fa fa-bar-chart"></i>Save</a>
+</li>
 {% endblock %}
 {% block breadcrumbs %}
-    {% include 'breadcrumbs_list.html' %}
+    {% include 'breadcrumb_list_new.html' %}
 {% endblock %}
-{% block page_content %}
-    <div id="current_view" class="brdr">
-        <form id="upload-parser" method="post" enctype="multipart/form-data">
-            <div>
-                <div>
-                    <input id="parser-name-input" type="text" value="{{parser_name}}">
-                    <button onclick="click_upload_btn()" id="upload-parser-btn" type="button">Chose file</button>
-                    <input onchange="input_form_change(this)" id="parser-file-input" name="parser-file" type="file" style="display: none">
-                    <div style="margin-top: 30px;" id="file-parse-failure-msg"></div>
+{% block content %}
+<div class="row">
+    <div class="col-md-6">
+        <div id="main_box" class="box box-primary">
+            <form id="upload-parser" method="post" enctype="multipart/form-data" role="form">
+                <div class="box-body">
+                    <div class="form-group">
+                        <label id="parser_name_label" for="parser-name-input">Parser Name</label>
+                        <input name="parser_name" class="form-control" id="parser-name-input" type="text" value="{{parser_name}}">
+                        <button class="btn btn-primary" onclick="click_upload_btn()" id="upload-parser-btn" type="button">Chose file</button>
+                        <input onchange="input_form_change(this)" id="parser-file-input" name="parser-file" type="file" class="hidden">
+                    </div>
                 </div>
-            </div>
-        </form>
-        <div id="snippet" style="text-align: left">
-            <pre>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+            <div class="box-body">
+<label id="parser-code-label" for="parser-code"><b>Code:</b></label>
+            <pre id="parser-code">
                 <code id="current_parser_code">
 {{parser_code}}
                 </code>
             </pre>
+            </div>
         </div>
     </div>
+</div>
+{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" href="/static/styles/highlight_default.css">
+{% endblock %}
+{% block javascripts %}
+<script src="/static/js/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<script src="/static/js/common.js"></script>
+<script src="/static/js/parser_callbacks.js"></script>
 {% endblock %}
