--- a/templates/base_scripts.html
+++ b/templates/base_scripts.html
@@ -16,4 +16,16 @@
   <script src="/static/libs/adminlte.min.js"></script>
 
   <script src="/static/js/ajtst.js"></script>
-  <script src="/static/js/csrf_protection.js"></script>
+
+  <script src="/static/js/common.js"></script>
+
+  <script>
+    var csrf_token = "{{csrf_token()}}";
+    $.ajaxSetup({
+    beforeSend: function(xhr, settings) {
+        if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+          xhr.setRequestHeader("X-CSRFToken", csrf_token);
+        }
+      }
+    });
+  </script>
