--- a/templates/monitoring/monitorings_table_view.html
+++ b/templates/monitoring/monitorings_table_view.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <div class="box">
+        <div class="box box-primary">
             <div class="box-body">
         {% if not entities %}
             NO ENTITIES CREATED
@@ -23,7 +23,7 @@
                     <a id="entity_edit" class="btn btn-app" name="{{ entity.id  }}"
                             onclick="window.location.href = '{{ url_for(edit_entity, project_id=project_id, entity_id=entity.id) }}';"
                     ><i class="fa fa-cogs"></i>Settings</a>
-                    <a id="seller_remove" class="btn btn-app"
+                    <a id="entity_remove" class="btn btn-app"
                             onclick = "remove_entity({{ project_id }}, '{{ common_name }}', {{ entity.id }}, '{{ entity.name }}', '{{ delete_entity_url }}', '{{ entity_view_url }}' )"
                             name="{{ entity.id  }}"><i class="fa fa-trash"></i>Delete</a>
                 </td>
@@ -37,7 +37,7 @@
                 </tr>
             </tfoot>
             </table>
-    {% endif %}
+            {% endif %}
             </div>
         </div>
     </div>
