--- a/templates/parser/test_parser_view.html
+++ b/templates/parser/test_parser_view.html
@@ -1,39 +1,58 @@
-{% extends 'base.html' %}
-{% block add_scripts %}
-<link rel="stylesheet" href="/static/styles/highlight_default.css">
-<script src="/static/js/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-<script src="/static/js/common.js"></script>
-<script src="/static/js/test_parser.js"></script>
+
+
+{% extends 'base_site.html' %}
+{% block title %}
+Test Parser
+{% endblock title%}
+{% block navigation_bar %}
+<li>
+    <a id="submit-parser-url" onclick="submit_form_check_js(document.getElementById('parser_url_form'))" class="btn btn-app"><i class="fa fa-bar-chart"></i>Run Test</a>
+</li>
 {% endblock %}
-{% block menu_entities %}
-    {% include 'menu_entities.html'  %}
+{% block breadcrumbs %}
+    {% include 'breadcrumb_list_new.html' %}
 {% endblock %}
-{% block page_content %}
-<div class="button-grp-horizontal">
-    <p class="left">{{ current_user }}</p>
-    <button class="btn-horizontal default right"
-            onclick="submit_form_check_js(document.getElementById('parser_url_form'))"
-            id="submit-parser-url"
-            type="button">Run Test</button>
+{% block content %}
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+            <div class="box-body">
+                <div class="form-group">
+                    <form id="parser_url_form" method="post" action="{{ submit_url }}">
+                        {{ form.csrf_token }}
+                        <label id="url-parser" for="url-for-parser"><b>URL:</b></label>
+                        <input class="form-control" id="url-for-parser" name="parser_url" type="text" value="" style="width: 100%">
+                        <label for="parser_parameter"><b>Parameter:</b></label>
+                        <textarea class="form-control" name="parser_parameter" id="parser_parameter"></textarea>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div id="test_parser_data" style="margin-bottom: 30px;">
-    <form id="parser_url_form" method="post" action="{{ submit_url }}">
-        <label id="url-parser" for="url-for-parser"><b>URL:</b></label>
-        <input id="url-for-parser" name="parser_url" type="text" value="" style="width: 100%">
-        <label for="parser_parameter"><b>Parameter:</b></label>
-        <textarea name="parser_parameter" style="display: block" cols="100" rows="5" id="parser_parameter"></textarea>
-    </form>
-</div>
-
-
-<div id="snippet" style="text-align: left">
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+            <div class="box-body">
 <label id="parser-code-label" for="parser-code"><b>Code:</b></label>
             <pre id="parser-code">
                 <code id="current_parser_code">
 {{parser_code}}
                 </code>
             </pre>
+            </div>
+        </div>
+    </div>
 </div>
+{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" href="/static/styles/highlight_default.css">
+{% endblock %}
+{% block javascripts %}
+<script src="/static/js/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<script src="/static/js/common.js"></script>
+<script src="/static/js/parser_callbacks.js"></script>
+<script src="/static/js/test_parser.js"></script>
 {% endblock %}
